chamber/css/base.css
/* * {
    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
} */

body {
    font-family: 'Outfit', sans-serif;
    font-size: 16px;
}

#banner {
    display:none;
    background-color: #F26F63;
    text-align: center;
    padding: 2rem;
}

header {
    display: grid;
    grid: 2fr 1fr / 1fr 2fr 2fr 1fr;
    align-items: center;
    justify-items: center;
    font-size: .7em;
    background-color: #011640;
    color: white;
    padding: .6em;
    grid-column-gap: .8rem;
}

.logo {
    width: 10px;
}

h1 {
    padding-left: 5px;
}

button {
    background-color: #011640;
    color: white;
    border: none;
    font-size: 2em;
}

button:hover {
    cursor: pointer;
}

.extra {
    display: none;
}

.date {
    grid-row: 2/3;
    grid-column: 1/5;
    align-self: center;
}

nav {
	margin: 0 auto;
	max-width: 760px;
}
.navigation {
	list-style: none;
	padding: 0;
    margin: 0;
    padding: .5rem;
    position: absolute;
    width: 100%;
    left: 0;
    padding: 0;
    font-size: 1em;
    top: 12%;
}

.navigation li {
	display: none;
}

.navigation a {
	display: block;
	padding: 0.75rem 2vw;
	text-decoration: none;
	color: white;
	transition: 0.2s;
}

nav ul li.active a, .navigation a:hover {
    background-color: #355B8C;
}

.hidden {
    display: none;
}

.toggle-btn {
    padding: 1em;
}

.social {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

/* the onclick JS toggles the .reponsive class from display none (.navigation li) to display block because the responsive class is added to the end of the class list like this in HTML.
  <ul class="navigation responsive">
*/
.responsive li {
	display: block;
}

.responsive ul {
    position: absolute;
    width: 100%;
}

.responsive a {
    background-color: #011640;
}

main {
    display: grid;
    grid-auto-rows: minmax(min-content, max-content);
    grid-template-columns: 1fr;
    grid-row-gap: 0;
    margin-bottom: .5rem;
    font-size: 1em;
}

main section {
    background-color: #355B8C40;
}

main section h3 {
    color: white;
    background-color: #355B8C;
    font-weight: bold;
    font-size: 20px;
    padding: 8px;
    margin: 0;
}

main section h4, main section p {
    font-weight: lighter;
}

main section p a {
    color: white;
    font-weight: normal;
    padding: 0 .25em;
}
main section p a:hover {
    color: lightgrey;
}

.spotlight {
    display: grid;
    grid: 1fr 1fr / 1fr;
    grid-row-gap: 1em;
}

.spotlight div {
    border: 4px dotted #F26F63;
    margin: 0;
}

.spotlight div p {
    color: black;
    font-weight: normal;
}

#spotlight3 {
    display: none;
}

.join {
    display: none;
}

.logo {
    width: 75px;
}

.icon {
    width: 40px;
}

.social a img {
    padding: .3em;
}

.hero {
    display: grid;
    grid: 1fr 1fr / 1fr 1fr;
}

.hero img {
    grid-column: 1/3;
    grid-row: 1/3;
    z-index: -1;
    width: 100%;
    height: 100%;
}

.hero h2 {
    grid-column: 1/3;
    grid-row: 1/2;
    padding: 1em;
    color: #F26F63;
    background-color: #02012460;
    margin: 0;
    width: fit-content;
    height: fit-content;
    font-size: 2em;
}

.hero button {
    grid-column: 2/3;
    grid-row: 2/3;
    justify-self: right;
    align-self: end;
    padding: 10px;
    border-radius: 7px;
    margin-bottom: 1.5em;
    margin-right: 1.5em;
    font-size: 2em;
    color: #221110;
    background-color: #BF6F7E;
}

.event {
    padding: 0 1em;
    background-color: #355B8C;
    color:white
}

.weather, .weather h3 {
    background-color: #011640;
    padding: .5em;
}

.news {
    background-color: #011640;
    color: white;
}

.news h3 {
    padding: 1em;
    background-color: #011640;;
}

.news p {
    padding: 0 1em 0 1em;
    font-weight: lighter;
}

footer {
    text-align: center;
    padding: 1em;
    background-color: #355B8C;
    color: white;
}

.contact-info a {
    color: lightgray;
}

.contact-info a:hover {
    color: darkgray;
}

.wdd-info {
    padding: .5rem;
}

